objects/EUR_CRM_ID_Card_Volume__c.object
<CustomObject>
    <description>Object records of volumes of each ID Card</description>
    <fields>
        <fullName>EUR_CRM_Annual_Volume_Index_X__c</fullName>
        <formula>IF( ISBLANK(EUR_CRM_Category__r.EUR_CRM_Contributive_Margin__c) , EUR_CRM_Annual_Volume__c, (EUR_CRM_Annual_Volume__c *  EUR_CRM_Category__r.EUR_CRM_Contributive_Margin__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Volume Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Annual_Volume__c</fullName>
        <label>Annual Volumes - bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Category_Index__c</fullName>
        <formula>EUR_CRM_Category__r.EUR_CRM_Contributive_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>EUR_CRM_Category__c</referenceTo>
        <relationshipLabel>ID Card Volumes</relationshipLabel>
        <relationshipName>EUR_CRM_ID_Card_Volumes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Dose_Service__c</fullName>
        <label>Dose € in Service Mark</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ID_Card__c</fullName>
        <description>ID Card that correponds to registration of Volume Sales</description>
        <label>ID Card</label>
        <referenceTo>EUR_CRM_ID_Card__c</referenceTo>
        <relationshipLabel>ID Card Volumes</relationshipLabel>
        <relationshipName>EUR_CRM_ID_Card_Volumes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_Premium_Brands__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. Premium Brands</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_SuperPremium_Brands__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. SuperPremium Brands</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_Super_Ultra_Premium_Brands__c</fullName>
        <formula>EUR_CRM_No_SuperPremium_Brands__c  +  EUR_CRM_No_UltraPremium_Brands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. Super Ultra Premium Brands</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_UltraPremium_Brands__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. UltraPremium Brands</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Service_Mark__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>ID Card Volumes</relationshipLabel>
        <relationshipName>EUR_CRM_ID_Card_Volumes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ID Card Volume (EU)</label>
    <nameField>
        <displayFormat>IDvol-{0000}</displayFormat>
        <label>Nº ID Card Volume</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID Card Volumes (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>